k8s/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feeds-api
  labels:
    app: feeds-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: feeds-api
  template:
    metadata:
      labels:
        app: feeds-api
    spec:
      containers:
        - name: feeds-api
          image: markgoertz/feeds:latest
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 200m
              memory: 200Mi
          volumeMounts:
          - name: settings
            mountPath: /app/settings
            readOnly: true
      volumes:
      - name: settings
        secret:
          secretName: feed-docker-appsettings
---
# Service for the API:
apiVersion: v1
kind: Service
metadata:
  name: feeds-api-service
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: feeds-api
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: morvie-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /feeds-service(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: feeds-api-service
            port:
              number: 80
